test_suite5/ALAN/test_suite/alan-2022-examples/failing/000770_mutation.alan
source j6 begin boolean call array f9A0; relax end
